--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cartao.css" type="text/css">
+    <link href="https://github.com/dhyagok/anivers-rio/blob/main/style.css" rel="stylesheet"/>
+    <script src="https://github.com/dhyagok/anivers-rio/blob/main/script.js"></script>
     <title>Cartão De Aniversário</title>
 </head>
 
